# FFJNIPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/ichunzhen/ffjniplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.h  JavaCallHelperCopy.cpp  JavaCallHelperCopy.h  NEFFmpeg.h  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/cn/ichunzhen/ffjniplayer/: FFPlayer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/ichunzhen/ffjniplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
